--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,10 @@ buildscript {
     dependencies { classpath "com.blackducksoftware.integration:common-gradle-plugin:0.0.+" }
 }
 
+plugins{
+	id 'org.sonarqube' version '2.6.1'
+}
+
 version = '12.0.1-SNAPSHOT'
 
 apply plugin: 'com.blackducksoftware.integration.library'
@@ -16,4 +20,12 @@ dependencies {
 
     testCompile 'org.mockito:mockito-core:2.13.0'
     testCompile 'org.skyscreamer:jsonassert:1.4.0'
+}
+
+sonarqube {
+    properties {
+        property 'sonar.projectName', 'Integrations - Integration BDIO'
+        property 'sonar.projectKey', 'com.blackducksoftware:int:integration-bdio'
+        property 'sonar.verbose', false
+   }
 }
