--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,10 @@ buildscript {
     dependencies { classpath "com.blackducksoftware.integration:common-gradle-plugin:0.0.+" }
 }
 
+plugins {
+    id "org.jetbrains.kotlin.jvm" version "1.3.50"
+}
+
 project.ext.moduleName = 'com.synopsys.integration.integration-bdio'
 project.ext.javaUseAutoModuleName = 'true'
 
@@ -21,7 +25,18 @@ versionFile << version
 
 dependencies {
     api 'com.blackducksoftware.integration:integration-common:17.3.0'
+    api 'com.blackducksoftware.bdio:bdio-rxjava:3.0.0-beta.47'
+
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
 
     testImplementation 'org.mockito:mockito-core:3.1.0'
     testImplementation 'org.skyscreamer:jsonassert:1.5.0'
+}
+
+compileKotlin {
+    kotlinOptions.jvmTarget = "1.8"
+}
+
+compileTestKotlin {
+    kotlinOptions.jvmTarget = "1.8"
 }
